fix menu 1920px ↑ layout bug

--- a/css/style.scss
+++ b/css/style.scss
@@ -73,7 +73,7 @@ img {
 #app {
   width: 100%;
   height: auto;
-  // overflow-y: scroll;
+  // overflow-y: scroll;  
   overflow-x: hidden;
   position: relative;
   color: $fontColor-main;
@@ -111,19 +111,21 @@ img {
 }
 
 #menu {
-  position: absolute;
-  right: 0;
-  top: 0;
-  z-index: 98;
-
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  justify-content: center;
-
   ::selection {
     color: $fontColor-selectLight;
+  }
+
+  .menu-frame {
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: 98;
+
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: center;
   }
 
   .item {
@@ -132,7 +134,6 @@ img {
     line-height: 2.5;
     margin: 0 24px 0 0;
   }
-
 }
 
 #index {
